<resources>
    <string name="app_name">BinaBola</string>
    <string name="action_login">Masuk</string>
    <string name="action_register">Daftar</string>
    <string name="label_login">Masuk</string>
    <string name="label_continuegoogle">Masuk dengan Google</string>
    <string name="label_login_subtitle">Silakan Login menggunakan akun yang terdaftar untuk melanjutkan</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_register_here">atau Daftar di sini</string>
    <string name="label_register">Daftar</string>
    <string name="label_register_subtitle">Buat Akun BinaBola </string>
    <string name="label_full_name">Nama Lengkap</string>
    <string name="hint_full_name">Masukkan nama lengkap</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="label_loading">Loading..</string>
    <string name="validation_full_name">Nama hanya boleh pakai huruf ya</string>
    <string name="validation_email">Oops, format Email tidak valid</string>
    <string name="validation_password">Minimal 8 karakter</string>
    <string name="loremipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regis_text_1">Daftar Sebagai?</string>
    <string name="regis_text_2">Isi Data Diri</string>
    <string name="regis_text_3">Isi Data Akun</string>
    <string name="action_language_setting">Bahasa</string>
    <string name="settings">Pengaturan</string>
    <string name="action_logout">Keluar</string>
    <string name="message_logout">Apakah kamu yakin untuk keluar akun?</string>
    <string name="label_yes">Ya</string>
    <string name="label_no">Tidak</string>
    <string name="error_message">Terjadi kesalahan pada server</string>

    <string name="start_running">Mulai</string>
    <string name="stop_running">Berhenti</string>
    <string name="start_point">Titik Awal</string>
    <string name="title_close_app">Close BinaBola?</string>
    <string name="message_close_app">Apakah kamu yakin untuk keluar aplikasi?</string>

    <string-array name="food_categories">
        <item>Morning</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="title_activity_track_run">TrackRunActivity</string>
    <string name="start_latihan">Start Latihan</string>
    <string name="todo">TODO</string>
    <string name="link_video">Link video</string>
    <string name="submit_tugas">Submit Tugas</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_binabola">Welcome to BinaBola!</string>
    <string name="join_us_on_a_journey_to_revolutionize_indonesian_football_our_app_is_designed_to_nurture_young_talents_helping_them_achieve_their_full_potential_through_quality_training_and_healthy_lifestyle_guidance">Join us on a journey to revolutionize Indonesian football. Our app is designed to nurture young talents, helping them achieve their full potential through quality training and healthy lifestyle guidance.</string>
    <string name="live_a_healthy_lifestyle">Live a Healthy Lifestyle!</string>
    <string name="proper_nutrition_is_key_to_a_successful_football_career_use_our_ai_food_feature_to_capture_images_of_your_meals_and_get_instant_nutritional_information_stay_healthy_and_optimize_your_performance_with_personalized_diet_recommendations">Proper nutrition is key to a successful football career. Use our AI Food feature to capture images of your meals and get instant nutritional information. Stay healthy and optimize your performance with personalized diet recommendations.</string>
    <string name="enhance_your_training">Enhance Your Training</string>
    <string name="our_ai_powered_strength_training_programs_ensure_you_perform_exercises_correctly_reducing_injury_risks_and_boosting_effectiveness_track_your_endurance_with_our_running_tracker_and_improve_your_speed_with_video_submission_analysis_elevate_your_game_with_the_best_training_methods_available">Our AI-powered strength training programs ensure you perform exercises correctly, reducing injury risks and boosting effectiveness. Track your endurance with our running tracker, and improve your speed with video submission analysis. Elevate your game with the best training methods available.</string>
    <string name="next">Next</string>
    <string name="illustration">Illustration</string>
    <string name="waktu">Waktu</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="jarak">Jarak</string>
    <string name="_0_0_km">0.0 km</string>
    <string name="selesaikan_latihan">Selesaikan Latihan</string>
    <string name="title">Register</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tinggi">Tinggi</string>
    <string name="tinggi_cm">Tinggi (cm)</string>
    <string name="berat">Berat</string>
    <string name="berat_kg">Berat (kg)</string>
    <string name="kalori_makanan_yang_masuk_hari_ini_0_kcal">Kalori Makanan yang Masuk Hari Ini: 0 kcal</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="add_food">Add Food</string>
    <string name="target_harian">Target Harian</string>
    <string name="_0">0</string>
    <string name="kcal">kcal</string>
    <string name="kalori_masuk_amp_terbakar"><![CDATA[Kalori Masuk & Terbakar]]></string>
    <string name="_0_kcal">0 kcal</string>
    <string name="misi_kamu_hari_ini">Misi Kamu Hari Ini</string>
    <string name="klub">Klub</string>
    <string name="pelatih">Pelatih</string>
    <string name="pemain">Pemain</string>
    <string name="user_name">user_name</string>
    <string name="_20">20</string>
    <string name="senin">Senin</string>
    <string name="food_name">food_name</string>
    <string name="food_cal">food_cal</string>
    <string name="pagi">Pagi</string>
    <string name="mission_title">Mission Title</string>
    <string name="supporting_or_descriptive_text_for_the_card_goes_lorem_ipsum_dolor_sit_amet">Supporting or descriptive text for the card goes lorem ipsum dolor sit amet</string>
    <string name="_5_mnt">5 mnt</string>
    <string name="_0_cal">0 kcal</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lorem_ipsum_dolor_sit_ametorem_ipsum_dolor_sit_ametorem_ipsum_dolor_sit_ametorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit ametorem ipsum dolor sit ametorem ipsum dolor sit ametorem ipsum dolor sit amet</string>
    <string name="scan_makanan">Scan Makanan</string>
    <string name="kalori_0_0_kcal">Kalori: 0.0 kcal</string>
    <string name="makanan">Makanan</string>
    <string name="nama_makanan">Nama makanan</string>
    <string name="jumlah">Jumlah</string>
    <string name="jumlah_asupan_pcs">Jumlah asupan (pcs)</string>
    <string name="kategori">Kategori</string>
    <string name="submit">Submit</string>
</resources>