<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.register.AccountFragment">

    <TextView
        android:id="@+id/tvNameLabel"
        android:textSize="14sp"
        android:textColor="@color/colorDarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.binabola.app.base.component.FullNameEditText
        android:id="@+id/edtName"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_full_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_4"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvNameLabel" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:textSize="14sp"
        android:textColor="@color/colorDarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <com.binabola.app.base.component.EmailEditText
        android:id="@+id/edtEmail"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_4"
        android:textSize="14sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:text="@string/label_password"
        android:textSize="14sp"
        android:textColor="@color/colorDarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail"/>

    <com.binabola.app.base.component.PasswordEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="14sp"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_password"
        android:layout_marginTop="@dimen/margin_4"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_margin="16dp"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        app:rippleColor="#40FFFFFF"
        app:cornerRadius="8dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:paddingVertical="16dp"
        android:text="@string/action_register"
        android:backgroundTint="@color/colorPrimaryGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>