<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.onboarding.Onboarding2Activity">

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:text="@string/skip"
        android:textSize="16sp" />

    <!-- Illustration ImageView -->
    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/illustration"
        android:src="@drawable/onboading_2" />

    <!-- Title TextView -->

    <!-- Description TextView -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/illustrationImageView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/enhance_your_training"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/our_ai_powered_strength_training_programs_ensure_you_perform_exercises_correctly_reducing_injury_risks_and_boosting_effectiveness_track_your_endurance_with_our_running_tracker_and_improve_your_speed_with_video_submission_analysis_elevate_your_game_with_the_best_training_methods_available"
        android:textColor="#B0B0B0"
        android:textSize="16sp" />



    <!-- Next button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:includeFontPadding="false"
        app:rippleColor="#40FFFFFF"
        app:cornerRadius="8dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/colorPrimaryGreen"
        android:text="@string/next"
        android:textColor="@color/white" />

</RelativeLayout>