<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:src=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:text="@string/label_login"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:text="@string/label_login_subtitle"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="@id/tvLoginTitle"
        android:textSize="18sp"
        android:textColor="@color/colorDarkGrey"/>

    <TextView
        android:id="@+id/tvEmailLabel"
        android:textSize="14sp"
        android:textColor="@color/colorDarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:background="@drawable/bg_bordered_edit_text"
        android:hint="@string/hint_email"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
        android:autofillHints="emailAddress"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:text="@string/label_password"
        android:textSize="14sp"
        android:textColor="@color/colorDarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:background="@drawable/bg_bordered_edit_text"
        android:maxLines="1"
        android:hint="@string/hint_password"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
        android:autofillHints="password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:includeFontPadding="false"
        app:rippleColor="#40FFFFFF"
        app:cornerRadius="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="16dp"
        android:text="@string/action_login"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/colorPrimaryGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toStartOf="@id/tvRegisterHere"
        app:layout_constraintStart_toStartOf="parent"
        app:dividerColor="@color/grey_400"
        app:layout_constraintTop_toTopOf="@id/tvRegisterHere"
        app:layout_constraintBottom_toBottomOf="@id/tvRegisterHere" />

    <TextView
        android:id="@+id/tvRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_register_here"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toEndOf="@id/tvRegisterHere"
        app:layout_constraintEnd_toEndOf="parent"
        app:dividerColor="@color/grey_400"
        app:layout_constraintTop_toTopOf="@id/tvRegisterHere"
        app:layout_constraintBottom_toBottomOf="@id/tvRegisterHere" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimaryGreen"
        android:includeFontPadding="false"
        android:paddingVertical="16dp"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterHere"
        app:rippleColor="#40FFFFFF" />

    <include
        android:id="@+id/loading_layout"
        android:visibility="gone"
        layout="@layout/layout_loading" />
</androidx.constraintlayout.widget.ConstraintLayout>