<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.onboarding.Onboarding1Activity">

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:text="@string/skip"
        android:textSize="16sp" />


    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="Illustration"
        android:src="@drawable/onboading_1" />



    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/illustrationImageView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/welcome_to_binabola"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/join_us_on_a_journey_to_revolutionize_indonesian_football_our_app_is_designed_to_nurture_young_talents_helping_them_achieve_their_full_potential_through_quality_training_and_healthy_lifestyle_guidance"
        android:textColor="#B0B0B0"
        android:textSize="16sp" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:includeFontPadding="false"
        app:rippleColor="#40FFFFFF"
        app:cornerRadius="8dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/colorPrimaryGreen"
        android:text="@string/next"
        android:textColor="@color/white" />

</RelativeLayout >